@@ -1,3 +1,4 @@
 # Default ignored files
 /shelf/
 /workspace.xml
+/inspectionProfiles/Project_Default.xml
