@@ -1,3 +1,4 @@
 Main Changelog:
 - Fix closing ')' on line 1312 because am big dumb.- Fix closing ')' on line 1312 because am big dumb.
 - Disable Forage System until can migrate to new system.
+- Resolve capitalization issue with terminator trait.
